Add comments to config.json

--- a/Develop/config/config.json
+++ b/Develop/config/config.json
@@ -1,4 +1,7 @@
+// Config.json stores details about the environment the database will run in. 
+// The information stored in the development, test, and production objects will be used to create a connection to the correct database depending on the environment.
 {
+  // Development refers to the database that will be used during development. Username, password, and database should be updated to reflect the programmer's local database.
   "development": {
     "username": "root",
     "password": null,
@@ -6,6 +9,7 @@
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
+  // Test refers to the database that will be used for testing, if there is one.
   "test": {
     "username": "root",
     "password": null,
@@ -13,6 +17,7 @@
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
+  // Production refers to the database that will be used for production.
   "production": {
     "username": "root",
     "password": null,
